--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light dark" />
+    <meta name="color-scheme" content="light" />
 
     <title>ITES Ltd. — Ins Tech Engineering Solutions Ltd.</title>
     <meta name="description" content="ITES Ltd. (Ins Tech Engineering Solutions Ltd.) — engineering & technology solutions in the UK.">
@@ -16,18 +16,18 @@
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
+    <link rel="stylesheet" href="./css/work.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/slider.css">
+
 
     <script type="module" src="./js/app.js"></script>
 </head>
 <body>
 <a class="skip-link" href="#main">Skip to content</a>
 
-<header class="topbar" data-topbar>
+<header class="topbar">
     <div class="container topbar__inner">
-        <a class="brand" href="#/home" aria-label="Go to Home">
-            <span class="brand__mark" aria-hidden="true"></span>
-            <span class="brand__text">ITES Ltd.</span>
-        </a>
 
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav">
             <span class="visually-hidden">Menu</span>
@@ -39,14 +39,19 @@
             <a class="nav__link" href="#/about" data-route="about">About us</a>
             <a class="nav__link" href="#/work" data-route="work">Our work</a>
         </nav>
+
+        <a class="brand" href="#/home">ITES Ltd.</a>
+
+        <div class="topbar__right"></div>
     </div>
 </header>
+
 
 <main id="main" class="main container" data-outlet aria-live="polite"></main>
 
 <footer class="footer">
     <div class="container footer__inner">
-        <small>© <span data-year></span> Company Name. All rights reserved.</small>
+        <small>© <span data-year></span> ITES Ltd. All rights reserved.</small>
     </div>
 </footer>
 
