--- a/pages/work.html
+++ b/pages/work.html
@@ -1,10 +1,38 @@
-<section class="section">
+<section class="section work">
     <h1 class="h1">Our work</h1>
-    <p class="lead">Selected projects and visual highlights.</p>
+    <p class="lead">Selected projects & highlights.</p>
 
-    <div class="grid">
-        <article class="card">Project 1</article>
-        <article class="card">Project 2</article>
-        <article class="card">Project 3</article>
-    </div>
+    <div class="tagbar" data-tagbar></div>
+
+    <div class="work-grid" data-work-grid></div>
 </section>
+
+<!-- modal root -->
+<div class="modal" data-modal aria-hidden="true">
+    <div class="modal__backdrop" data-modal-close></div>
+
+    <div class="modal__panel" role="dialog" aria-modal="true" aria-label="Project details">
+        <button class="modal__close" type="button" data-modal-close aria-label="Close">✕</button>
+
+        <div class="modal__content">
+            <div class="modal__left">
+                <div class="slider" data-slider>
+                    <button class="slider__btn slider__btn--prev" type="button" data-prev aria-label="Previous">‹</button>
+                    <div class="slider__viewport" data-viewport></div>
+                    <button class="slider__btn slider__btn--next" type="button" data-next aria-label="Next">›</button>
+                </div>
+            </div>
+
+            <div class="modal__right">
+                <p class="modal__kicker">Project</p>
+                <h2 class="modal__title" data-title></h2>
+
+                <p class="modal__meta" data-address></p>
+
+                <p class="modal__desc" data-desc></p>
+
+                <div class="modal__tags" data-tags></div>
+            </div>
+        </div>
+    </div>
+</div>
