[BUGFIX] Changes according to business

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <h1 class="h1">Premium, minimalist web presence.</h1>
     <p class="lead">A short, confident value proposition for a UK company.</p>
     <div class="actions">
-        <a class="btn" href="#/work">View work</a>
+        <a class="btn" href="#/portfolio">View portfolio</a>
         <a class="btn btn--ghost" href="#/about">About us</a>
     </div>
 </section>
