--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
-    <link rel="stylesheet" href="./css/work.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
     <link rel="stylesheet" href="./css/modal.css">
     <link rel="stylesheet" href="./css/slider.css">
 
@@ -37,7 +37,10 @@
         <nav id="nav" class="nav" aria-label="Primary navigation">
             <a class="nav__link" href="#/home" data-route="home">Home</a>
             <a class="nav__link" href="#/about" data-route="about">About us</a>
-            <a class="nav__link" href="#/work" data-route="work">Our work</a>
+            <a class="nav__link" href="#/portfolio" data-route="portfolio">Portfolio</a>
+            <a class="nav__link" href="#/work-process" data-route="work-process">Work Process</a>
+            <a class="nav__link" href="#/services" data-route="services">Services</a>
+            <a class="nav__link" href="#/contact" data-route="contact">Contact Us</a>
         </nav>
 
         <a class="brand" href="#/home">ITES Ltd.</a>
