--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,10 +1,10 @@
-<section class="section work">
-    <h1 class="h1">Our work</h1>
+<section class="section portfolio">
+    <h1 class="h1">Portfolio</h1>
     <p class="lead">Selected projects & highlights.</p>
 
     <div class="tagbar" data-tagbar></div>
 
-    <div class="work-grid" data-work-grid></div>
+    <div class="portfolio-grid" data-portfolio-grid></div>
 </section>
 
 <!-- modal root -->
