--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/portfolio.css">
     <link rel="stylesheet" href="./css/modal.css">
     <link rel="stylesheet" href="./css/slider.css">
+    <link rel="stylesheet" href="./css/home.css" />
 
 
     <script type="module" src="./js/app.js"></script>
