[FEATURE] Extended Home Screen

--- a/pages/home.html
+++ b/pages/home.html
@@ -77,3 +77,50 @@
 
     </div>
 </section>
+
+<section class="home-s home-s--sep-top home-s--portfolio">
+    <header class="home-portfolio-head">
+        <h2 class="home-portfolio-title">Our work</h2>
+    </header>
+
+    <div class="home-portfolio-grid">
+        <a class="home-portfolio-card" href="#/portfolio" data-portfolio-tag="Meme">
+            <img class="home-portfolio-card__img" src="/assets/home/3.webp" alt="" loading="lazy" decoding="async">
+            <span class="home-portfolio-card__overlay" aria-hidden="true"></span>
+            <span class="home-portfolio-card__body">
+                <span class="home-portfolio-card__title">Portfolio #1</span>
+                <span class="home-portfolio-card__desc">
+                    Short description. Up to three sentences max. Premium, minimal, clean.
+                </span>
+            </span>
+        </a>
+
+        <a class="home-portfolio-card" href="#/portfolio" data-portfolio-tag="Look at this dude">
+            <img class="home-portfolio-card__img" src="/assets/home/4.webp" alt="" loading="lazy" decoding="async">
+            <span class="home-portfolio-card__overlay" aria-hidden="true"></span>
+            <span class="home-portfolio-card__body">
+                <span class="home-portfolio-card__title">Portfolio #2</span>
+                <span class="home-portfolio-card__desc">
+                    Short description. Up to three sentences max. Premium, minimal, clean.
+                </span>
+            </span>
+        </a>
+
+        <a class="home-portfolio-card" href="#/portfolio" data-portfolio-tag="Chuj">
+            <img class="home-portfolio-card__img" src="/assets/home/5.webp" alt="" loading="lazy" decoding="async">
+            <span class="home-portfolio-card__overlay" aria-hidden="true"></span>
+            <span class="home-portfolio-card__body">
+                <span class="home-portfolio-card__title">Portfolio #3</span>
+                <span class="home-portfolio-card__desc">
+                    Short description. Up to three sentences max. Premium, minimal, clean.
+                </span>
+            </span>
+        </a>
+    </div>
+
+    <div class="home-portfolio-cta">
+        <a class="btn btn--primary btn--home-cta" href="#/portfolio">
+            Want to check our other work ?
+        </a>
+    </div>
+</section>
