[FEATURE] Loading Screen

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 <body>
 <a class="skip-link" href="#main">Skip to content</a>
 
+<div class="loader" data-loader aria-hidden="true">
+    <div class="loader__inner" role="status" aria-live="polite" aria-label="Loading">
+        <span class="loader__spinner" aria-hidden="true"></span>
+        <span class="loader__text">Loading…</span>
+    </div>
+</div>
+
 <header class="topbar">
     <div class="container topbar__inner">
 
